--- a/tex/EtudeTheoriqueSimus.tex
+++ b/tex/EtudeTheoriqueSimus.tex
@@ -3,4 +3,4 @@
 
 \section{Détermination des coefficients empiriques du modèle transitoire}
 
-Le modèle transitoire présenté au chapitre §\ref{chap:ModeleTransoitoire_SansConvNat} comporte des paramètres empiriques à adapter pour approcher les résultats expérimentaux. Parmi eux, il y la source de chaleur liées à la vorticité $Q_{\sf vort}$, et les coefficients d'échanges aux interfaces en $x=0$, $x=L_{\sf reg}$ et $r=R_{\sf reg}$, notés respectivement $h_{x}|_{x=0}$, $h_{x}|_{x=L_{\sf reg}}$ et $h_{r}|_{r=R_{\sf reg}}$. Ces trois derniers sont supposés uniquement dépendants de l'écart de température $\tau$, et pour des raisons de simplicité sont estimés au moyen des mesures `\texttt{heat\_only}', ce qui permet en outre de s'affranchir de la vorticité. Le modèle est alors modifié pour calculer la température du système à $p=0$ et $u=0$.
+Le modèle transitoire présenté au chapitre §\ref{chap:ModeleTransoitoire_SansConvNat} comporte des paramètres empiriques à adapter pour approcher les résultats expérimentaux. Parmi eux, il y la source de chaleur liées à la vorticité $Q_{\sf vort}$, et les coefficients d'échanges aux interfaces en $x=0$, $x=L_{\sf reg}$ et $r=R_{\sf reg}$, notés respectivement $h_{x}|_{x=0}$, $h_{x}|_{x=L_{\sf reg}}$ et $h_{r}|_{r=R_{\sf reg}}$. Ces trois derniers sont supposés uniquement dépendants de l'écart de température $\tau$, et pour des raisons de simplicité sont estimés au moyen des mesures `\texttt{heat\_only}' verticales, ce qui permet en outre de s'affranchir de la vorticité et de la convection naturelle jugée négligeable \textcolor{red}{horizontalement/dans la boucle de rétroaction acoustique}. La température du système est ainsi calculée pour $p=0$ et $u=0$.
