--- a/tex/IndexNotations.tex
+++ b/tex/IndexNotations.tex
@@ -69,8 +69,11 @@
 %		\hline
 		\multicolumn{2}{c}{Indices et exposants}  \\\hline
 		\textbf{Symbole} & \textbf{Définition} \\\hline\hline
-		$\perp \mathbf g$ & Perpendiculaire à la gravité $\mathbf g$ \\
-		$//~\mathbf g$ & Parallèle à la gravité $\mathbf g$ \\
-		$p$ & Lié au matériau poreux
+		$\bullet^{\perp \mathbf g}$ & Perpendiculaire à la gravité $\mathbf g$ \\
+		$\bullet^{//~\mathbf g}$ & Parallèle à la gravité $\mathbf g$ \\
+		$\bullet_p$ & Lié au matériau poreux\\
+		$\bullet^*$ & Conjugué complexe\\
+		$\bullet_g$ & Relatif au gaz dans le matériau poreux\\
+		$\bullet_s$ & Relatif au solide du matériau poreux
 	\end{tabular}
 \end{center}
