--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -348,6 +348,8 @@ Encadrants : & Hélène Bailliet, \textit{Université de Poitiers}\\
 
 \input{RecapCondExpe}
 
+\input{FabricNoyauTA}
+
 %\input{CircuitFerme}
 
 %\input{ChangeTraversees}
