--- a/tex/EtudeExperimentale.tex
+++ b/tex/EtudeExperimentale.tex
@@ -95,7 +95,7 @@ L'évolution de température $\tau$ au cours de l'expérience à l'amplitude aco
 
 \subsubsection{Expériences avec le réfrigérateur vertical}
 \paragraph{Sans acoustique}
-La figure \ref{fig:HeatOnly_CHXout_V1V2} blablabla
+La figure \ref{fig:HeatOnly_CHXout_V1V2} montre l'évolution de la température dans la cavité d'adaptation d'impédance, après allumage d'une charge thermique fournie par les résistances chauffantes placées dans l'échangeur froid. Les sources acoustiques sont éteintes pour cette expérience, dans l'objectif de séparer les différents effets qui prennent place dans le \textsc{Tacot}. À \qty{50}{\second}, les charges thermiques sont alimentées, et les températures à proximité immédiate de l'échangeur --- les thermocouples \numlist{1;2;3} --- augmentent. La charge thermique est la même dans les deux orientations, mais les températures atteintes diffèrent : le thermocouple au centre relève blabla. L'explication vient en observant également le comportement de la température de l'autre côté de la cavité, devant la source acoustique principale. En effet, l'allure des courbes noires est complètement différente d'une orientation à l'autre. Dans le cas où la source acoustique est en dessous du noyau, l'évolution de la température est nulle, tandis que lorsqu'elle est au-dessus, sa température est égale à celle relevée autour de la charge thermique.
 
 \begin{figure}[!ht]
     \centering
