Mise en forme figure début
`\texttt{H1}'

--- a/fig/fig_ConvNat_Acou/tex/fig_Acou_CHXout_H1H2_Low.tex
+++ b/fig/fig_ConvNat_Acou/tex/fig_Acou_CHXout_H1H2_Low.tex
@@ -19,9 +19,9 @@
     
 		\addlegendimage{legend image with text=}
 		\addlegendentry{}
-		\addlegendimage{legend image with text=H1}
+		\addlegendimage{legend image with text=`\texttt{H1}'}
 		\addlegendentry{}
-		\addlegendimage{legend image with text=H2} 
+		\addlegendimage{legend image with text=`\texttt{H2}'} 
 		\addlegendentry{}   
     
     	\addlegendimage{legend image with text=Source acoustique principale}
