--- a/tex/EtudeExperimentale.tex
+++ b/tex/EtudeExperimentale.tex
@@ -26,7 +26,7 @@ ce qui correspond après application numérique des équation~\eqref{eq:VitesseR
 	\end{align}
 	\label{eq:VitesseReference_Rayleigh_Exple5K}%
 \end{subequations}
-dans le cas d'une différence de température de \qty{1}{\degreeCelsius}, soit une différence de température bien plus faible que celles obtenus pour toutes les expériences. Cette différence de température apparaît après le démarrage du réfrigérateur, suite au refroidissement du côté froid du régénérateur et celui dans une moindre mesure -- voire inexistant -- de la source acoustique principale située en face, à l'autre extrémité du cône d'adaptation d'impédance.
+dans le cas d'une différence de température de \qty{1}{\degreeCelsius}, soit une différence de température bien plus faible que celles obtenus pour toutes les expériences. Cette différence de température apparaît après le démarrage du réfrigérateur, suite au refroidissement du côté froid du régénérateur et celui dans une moindre mesure --- voire inexistant --- de la source acoustique principale située en face, à l'autre extrémité du cône d'adaptation d'impédance.
 
 Les quatre orientations présentées sur la figure~\ref{fig:OrientationCore} sont regroupées par deux, avec d'une part les orientations horizontales du \textsc{Tacot} `\texttt{H1}' et `\texttt{H2}' où $\psi_v=\ang{0}$ (sous-figures~\subref{fig:OrientationCore_H1} et \subref{fig:OrientationCore_H2}), et d'autre part les orientations verticales `\texttt{V1}' et `\texttt{V2}' pour lesquelles $\psi_v=\pm\ang{90}$ (sous-figures~\subref{fig:OrientationCore_V1} et \subref{fig:OrientationCore_V2}). Pour chacun de ces groupes, les résultats des expériences réalisées aux trois amplitudes décrites dans le paragraphe~§\ref{chap:MesureAvecAcou} sont présentés sur les figures~\ref{fig:HeatOnly_CHXout_H1H2} -- \ref{fig:Acou_CHXout_H1H2_High} et \ref{fig:HeatOnly_CHXout_V1V2} -- \ref{fig:Acou_CHXout_V1V2_High}, respectivement pour les orientations horizontales et verticales. Pour rappel, la temperature initiale de chaque thermocouple est soustraite dans toutes les mesures qui suivent. De plus, les mesures sont rognées de \qtyrange{0}{3500}{\second} pour que la définition du régime stationnaire soit la même pour tous les résultats (sauf dans le cas du \textsc{Tacot} horizontal à moyenne amplitude acoustique, où un problème d'acquisition contraint le découpage de \qtyrange{0}{2700}{\second}). Un rééchantillonnage à \qty{.1}{\hertz} est également appliqué aux mesures de températures pour limiter la dimension des fichiers de données.
 
@@ -55,7 +55,7 @@ Pour séparer les phénomènes physiques et les transferts thermiques mis en jeu
 \end{figure}
 
 \paragraph{Avec acoustique}\label{chap:Acou_CHXout_H1H2_low}
-Les premiers résultats sont obtenus pour les expériences horizontales `\texttt{H1}' et `\texttt{H2}' présentées sur les figures~\ref{fig:OrientationCore_H1} et \subref{fig:OrientationCore_H2}, à faible amplitude acoustique avec un \textit{drive ratio} $DR=\qty{.7}{\percent}$, et la température $\tau$ est tracée en fonction du temps $t$ sur la figure~\ref{fig:Acou_CHXout_H1H2_Low}. Pour les deux séries de mesures, c'est-à-dire les plans de thermocouples placés la verticale et l'horizontale et représentées respectivement en trait plein et trait tireté, la différence de température de \qty{2}{\degreeCelsius} entre le centre de l'échangeur froid et la source acoustique plus chaude apparaît après le démarrage de la pompe à chaleur à $t=\qty{100}{\second}$. Sur l'expérience réalisée dans l'orientation `\texttt{H2}', tous les thermocouples sont à la même altitude, et l'égalité des thermocouples~1~et~3 en bleu et en jaune permet notamment de visualiser une symétrie par rapport à un plan vertical passant par l'axe de symétrie du réfrigérateur. En revanche, cette symétrie n'est pas visible sur les courbes en traits pleins qui tracent les résultats de l'expérience menée en plaçant le réfrigérateur dans l'orientation `\texttt{H1}', puisqu'une dépendance de $\tau$ en fonction de $r$ est observable. En particulier, la courbe jaune correspondant au thermocouple~3 est la plus basse, en altitude comme en température, tandis que la courbe bleue qui représente le thermocouple~1 est la plus élevée des température mesurées sur l'échangeur froid, tout en y étant placée au plus haut. Toutefois, ce gradient de température n'est pas linéaire car la température au centre de l'échangeur froid mesurée par le thermocouple~2 n'est séparée que de \qty{.3}{\degreeCelsius} de la température mesurée par le thermocouple~3, tandis que cet écart est de \qty{2.5}{\degreeCelsius} avec le thermocouple~1. Cet dissymétrie est \textit{a priori} inattendue avec les résultats déjà obtenus dans les expériences sans acoustique.
+Les premiers résultats sont obtenus pour les expériences horizontales `\texttt{H1}' et `\texttt{H2}' présentées sur les figures~\ref{fig:OrientationCore_H1} et \subref{fig:OrientationCore_H2}, à faible amplitude acoustique avec un \textit{drive ratio} $DR=\qty{.7}{\percent}$, et la température $\theta$ est tracée en fonction du temps $t$ sur la figure~\ref{fig:Acou_CHXout_H1H2_Low}. Pour les deux séries de mesures, c'est-à-dire les plans de thermocouples placés la verticale et l'horizontale et représentées respectivement en trait plein et trait tireté, la différence de température de \qty{2}{\degreeCelsius} entre le centre de l'échangeur froid et la source acoustique plus chaude apparaît après le démarrage de la pompe à chaleur à $t=\qty{100}{\second}$. Sur l'expérience réalisée dans l'orientation `\texttt{H2}', tous les thermocouples sont à la même altitude, et l'égalité des thermocouples~1~et~3 en bleu et en jaune permet notamment de visualiser une symétrie par rapport à un plan vertical passant par l'axe de symétrie du réfrigérateur. En revanche, cette symétrie n'est pas visible sur les courbes en traits pleins qui tracent les résultats de l'expérience menée en plaçant le réfrigérateur dans l'orientation `\texttt{H1}', puisqu'une dépendance de $\theta$ en fonction de $r$ est observable. En particulier, la courbe jaune correspondant au thermocouple~3 est la plus basse, en altitude comme en température, tandis que la courbe bleue qui représente le thermocouple~1 est la plus élevée des température mesurées sur l'échangeur froid, tout en y étant placée au plus haut. Toutefois, ce gradient de température n'est pas linéaire car la température au centre de l'échangeur froid mesurée par le thermocouple~2 n'est séparée que de \qty{.3}{\degreeCelsius} de la température mesurée par le thermocouple~3, tandis que cet écart est de \qty{2.5}{\degreeCelsius} avec le thermocouple~1. Cet dissymétrie est \textit{a priori} inattendue avec les résultats déjà obtenus dans les expériences sans acoustique.
 \smallskip
 
 %Tout d'abord, il est important de remarquer l'apparition de la différence de température après le démarrage du réfrigérateur entre la source acoustique principale (en noir) et le thermocouple 2 (en orange) situé en face, et ce, quel que soit l'orientation du plan de thermocouple. À cette différence de température s'ajoute la différence entre les courbes dans l'une et l'autre orientation, ce qui valide l'hypothèse de l'influence de la direction de la gravité sur la distribution de température dans la cavité d'adaptation d'impédance proposée par l'étude du nombre de Rayleigh. Notamment, la courbe jaune, qui représente la température mesurée par le thermocouple~3, atteint la température la plus faible quand ce capteur se trouve à la position la plus basse (courbe en trait plein), alors que lorsqu'il est à la même altitude que les autres thermocouples (courbe en trait tireté), il est également à la même température que le thermocouple~1. Un plan de symétrie vertical semble donc être présent lorsque le réfrigérateur est en position horizontale, ce qui est visible dans les expériences où les thermocouples sont sur un plan horizontal. En revanche, en vertical on s'attend à avoir un gradient linéaire mais en fait bof (comparer avec résultats lisn)
@@ -69,7 +69,7 @@ Les premiers résultats sont obtenus pour les expériences horizontales `\texttt
     \label{fig:Acou_CHXout_H1H2_Low}
 \end{figure}
 
-La figure~\ref{fig:Acou_CHXout_H1H2_Mid} représente également l'évolution temporelle de la température $\tau$ dans la cavité, pour l'amplitude acoustique dite \og moyenne \fg{}  de \textit{drive ratio} $DR=\qty{1.7}{\percent}$. Après l'apparition de l'écart de température échangeur froid - source acoustique, qui vaut \qty{10.2}{\degreeCelsius} en `\texttt{H1}' et \qty{15.2}{\degreeCelsius} en `\texttt{H2}', des symptômes similaires à l'expérience à faible amplitude sont observables. À nouveau, les thermocouples~1~et~3 affichent des températures égales quand leurs altitudes sont égales (orientation `\texttt{H2}') et la symétrie des températures par rapport au plan vertical qui passe par le centre du noyau thermoacoustique est à nouveau mise en évidence. En revanche,  un écart de \qty{10}{\degreeCelsius} est visible lorsqu'ils sont l'un au dessus de l'autre (orientation `\texttt{H1}'). Dans cette orientation, le gradient vertical de température n'est toujours pas linéaire, puisque les températures~2~et~3 sont égales l'une à l'autre, \qty{10.2}{\degreeCelsius} en deça de la température mesurée par le thermocouple~1. 
+La figure~\ref{fig:Acou_CHXout_H1H2_Mid} représente également l'évolution temporelle de la température $\theta$ dans la cavité, pour l'amplitude acoustique dite \og moyenne \fg{}  de \textit{drive ratio} $DR=\qty{1.7}{\percent}$. Après l'apparition de l'écart de température échangeur froid - source acoustique, qui vaut \qty{10.2}{\degreeCelsius} en `\texttt{H1}' et \qty{15.2}{\degreeCelsius} en `\texttt{H2}', des symptômes similaires à l'expérience à faible amplitude sont observables. À nouveau, les thermocouples~1~et~3 affichent des températures égales quand leurs altitudes sont égales (orientation `\texttt{H2}') et la symétrie des températures par rapport au plan vertical qui passe par le centre du noyau thermoacoustique est à nouveau mise en évidence. En revanche,  un écart de \qty{10}{\degreeCelsius} est visible lorsqu'ils sont l'un au dessus de l'autre (orientation `\texttt{H1}'). Dans cette orientation, le gradient vertical de température n'est toujours pas linéaire, puisque les températures~2~et~3 sont égales l'une à l'autre, \qty{10.2}{\degreeCelsius} en deça de la température mesurée par le thermocouple~1. 
 \smallskip 
 
 \begin{figure}[!ht]
@@ -81,7 +81,7 @@ La figure~\ref{fig:Acou_CHXout_H1H2_Mid} représente également l'évolution tem
     \label{fig:Acou_CHXout_H1H2_Mid}
 \end{figure}
 
-L'évolution de température $\tau$ au cours de l'expérience à l'amplitude acoustique \og élevée \fg{} est représentée sur la figure~\ref{fig:Acou_CHXout_H1H2_High}. Dans cette expérience, le \textit{drive ratio} est $DR=\qty{3.5}{\percent}$, ce qui correspond à l'amplitude pour laquelle les meilleures performances avaient été obtenues pour cette machine dotée du précédent noyau thermoacoustique. Les résultats de cette expérience sont assez similaire à ceux obtenus pour les faible et moyenne amplitude, à quelques différences près. Après l'établissement de la différence de température de \qty{16}{\degreeCelsius} entre le centre de l'échangeur froid et la source acoustique principale suite au démarrage de la machine, plusieurs effets sont à noter. Premièrement, la distribution de température est bien différente entre le cas `\texttt{H1}' où le plan de thermocouples est vertical et le cas `\texttt{H2}' où il est horizontal. En particulier, les courbes noires d'une part et les courbes rouges d'autre part se superposent d'une orientation à l'autre, ce qui est un effet attendu au vu de leur position sur l'axe de symétrie du réfrigérateur. Ensuite, la température le long de la dimension verticale $\mathbf e_r^{//\mathbf g}$ augmente avec cette dernière, encore une fois avec les thermocouples~2~et~3 à \qty{2}{\degreeCelsius} l'un de l'autre, et le thermocouple~1 \qty{12}{\degreeCelsius} au-dessus. Contrairement aux observations précédentes de ce gradient, à cette amplitude c'est le thermocouple~2 qui indique la température la plus basse, bien qu'il se trouve \qty{74}{\milli\meter} au-dessus du thermocouple~3. Cela dit, cet écart entre les deux thermocouples~2~et~3 est faible devant la valeur de température atteinte lors du fonctionnement de la machine et du refroidissement de cette zone, c'est-à-dire \qty{-23}{\degreeCelsius}. Il est possible de considérer cet écart comme une incertitude de mesure et ainsi se ramener à une analyse équivalente à celles des amplitudes plus faibles. Dans l'orientation `\texttt{H2}', la symétrie par rapport au plan vertical qui était visible aux amplitudes faibles et moyennes ne l'est plus. Les thermocouples~1~et~3 ne sont plus égaux, et sont séparés de \qty{2}{\degreeCelsius}. Cependant, pour les mêmes raisons que précédemment, l'écart est à nouveau considéré comme négligeable devant la valeur de la température atteinte, et les mêmes analyses qu'aux amplitudes faible et moyenne sont proposées.
+L'évolution de température $\theta$ au cours de l'expérience à l'amplitude acoustique \og élevée \fg{} est représentée sur la figure~\ref{fig:Acou_CHXout_H1H2_High}. Dans cette expérience, le \textit{drive ratio} est $DR=\qty{3.5}{\percent}$, ce qui correspond à l'amplitude pour laquelle les meilleures performances avaient été obtenues pour cette machine dotée du précédent noyau thermoacoustique. Les résultats de cette expérience sont assez similaire à ceux obtenus pour les faible et moyenne amplitude, à quelques différences près. Après l'établissement de la différence de température de \qty{16}{\degreeCelsius} entre le centre de l'échangeur froid et la source acoustique principale suite au démarrage de la machine, plusieurs effets sont à noter. Premièrement, la distribution de température est bien différente entre le cas `\texttt{H1}' où le plan de thermocouples est vertical et le cas `\texttt{H2}' où il est horizontal. En particulier, les courbes noires d'une part et les courbes rouges d'autre part se superposent d'une orientation à l'autre, ce qui est un effet attendu au vu de leur position sur l'axe de symétrie du réfrigérateur. Ensuite, la température le long de la dimension verticale $\mathbf e_r^{//\mathbf g}$ augmente avec cette dernière, encore une fois avec les thermocouples~2~et~3 à \qty{2}{\degreeCelsius} l'un de l'autre, et le thermocouple~1 \qty{12}{\degreeCelsius} au-dessus. Contrairement aux observations précédentes de ce gradient, à cette amplitude c'est le thermocouple~2 qui indique la température la plus basse, bien qu'il se trouve \qty{74}{\milli\meter} au-dessus du thermocouple~3. Cela dit, cet écart entre les deux thermocouples~2~et~3 est faible devant la valeur de température atteinte lors du fonctionnement de la machine et du refroidissement de cette zone, c'est-à-dire \qty{-23}{\degreeCelsius}. Il est possible de considérer cet écart comme une incertitude de mesure et ainsi se ramener à une analyse équivalente à celles des amplitudes plus faibles. Dans l'orientation `\texttt{H2}', la symétrie par rapport au plan vertical qui était visible aux amplitudes faibles et moyennes ne l'est plus. Les thermocouples~1~et~3 ne sont plus égaux, et sont séparés de \qty{2}{\degreeCelsius}. Cependant, pour les mêmes raisons que précédemment, l'écart est à nouveau considéré comme négligeable devant la valeur de la température atteinte, et les mêmes analyses qu'aux amplitudes faible et moyenne sont proposées.
 
 \begin{figure}[!ht]
     \centering
@@ -95,7 +95,7 @@ L'évolution de température $\tau$ au cours de l'expérience à l'amplitude aco
 
 \subsubsection{Expériences avec le réfrigérateur vertical}
 \paragraph{Sans acoustique}
-La figure \ref{fig:HeatOnly_CHXout_V1V2} montre l'évolution de la température dans la cavité d'adaptation d'impédance, après allumage d'une charge thermique fournie par les résistances chauffantes placées dans l'échangeur froid. Les sources acoustiques sont éteintes pour cette expérience, dans l'objectif de séparer les différents effets qui prennent place dans le \textsc{Tacot}. À \qty{50}{\second}, les charges thermiques sont alimentées, et les températures à proximité immédiate de l'échangeur --- les thermocouples \numlist{1;2;3} --- augmentent. La charge thermique est la même dans les deux orientations, mais les températures atteintes diffèrent : le thermocouple au centre relève blabla. L'explication vient en observant également le comportement de la température de l'autre côté de la cavité, devant la source acoustique principale. En effet, l'allure des courbes noires est complètement différente d'une orientation à l'autre. Dans le cas où la source acoustique est en dessous du noyau, l'évolution de la température est nulle, tandis que lorsqu'elle est au-dessus, sa température est égale à celle relevée autour de la charge thermique.
+Avant de s'intéresser aux expériences dans lesquelles tous les effets sont combinés, un essai est exécuté en l'absence de sources acoustique pour étudier l'effet de la convection naturelle pour une fréquence nulle. La figure \ref{fig:HeatOnly_CHXout_V1V2} montre l'évolution de la température dans la cavité d'adaptation d'impédance, après allumage d'une charge thermique fournie par les résistances chauffantes placées dans l'échangeur froid. À \qty{50}{\second}, les charges thermiques sont alimentées, et les températures à proximité immédiate de l'échangeur --- les thermocouples \numlist{1;2;3} --- augmentent. La charge thermique est la même dans les deux orientations, mais les températures atteintes diffèrent : le thermocouple au centre relève \textcolor{red}{blabla}. L'explication vient en observant également le comportement de la température de l'autre côté de la cavité, devant la source acoustique principale. En effet, l'allure des courbes noires est complètement différente d'une orientation à l'autre. Dans le cas où la source acoustique est en dessous du noyau, l'évolution de la température est nulle, tandis que lorsqu'elle est au-dessus, sa température est égale à celle relevée autour de la charge thermique, quand bien même avec un retard dû à la vitesse.
 
 \begin{figure}[!ht]
     \centering
@@ -107,7 +107,7 @@ La figure \ref{fig:HeatOnly_CHXout_V1V2} montre l'évolution de la température 
 \end{figure}
 
 \paragraph{Avec acoustique}
-La figure~\ref{fig:Acou_CHXout_V1V2_Low} trace les températures mesurées dans la cavité d'adaptation d'impédance pour des expériences où le réfrigérateur est placé dans les orientations verticales présentées figures~\ref{fig:OrientationCore_V1} et \subref{fig:OrientationCore_V2}, pour une amplitude \og faible \fg{} soit un \textit{drive ratio} $DR=\qty{.7}{\percent}$. Contrairement aux expériences horizontales où les effets de convection naturelle sont toujours présents mais pas toujours visibles, dans les expériences verticales il existe une configuration favorable à la mise en place d'une instabilité de convection naturelle de type Rayleigh-Bénard, et l'autre, inverse, qui est stable. La première configuration est l'orientation `\texttt{V1}', car la source acoustique y est en dessous du noyau thermoacoustique, car le sens du gradient de température est opposé à la gravité, tandis que la seconde est l'orientation `\texttt{V2}' où la source acoustique est au-dessus du noyau. Dans cette dernière orientation, le gradient de température est dans le même sens que la gravité, et il n'y a pas de flux de chaleur qui apparaît de manière spontanée. La première remarque concerne la différence d'aspect de l'évolution des températures entre une orientation et l'autre, malgré une axi-symétrie visible dans les deux cas et attendu au vu de la colinéarité de la dimensions axiale $\mathbf e_x$ et de la gravité $\mathbf g$. En observant les tracés en lignes tiretées, qui tracent l'évolution de la température $\tau$ au cours de l'expérience dans l'orientation `\texttt{V2}', une différence de température de \qty{3.2}{\degreeCelsius} entre l'échangeur froid du noyau et la source acoustique principale plus chaude apparaît et se maintient durant toute la durée de l'expérience. C'est d'ailleurs le plus grand écart de température relevé dans cette zone. Plus précisément, la température mesurée devant la source acoustique principale baisse \qty{.8}{\degreeCelsius} même après démarrage de celle-ci, ce qui est assez faible pour être en accord avec l'hypothèse de stabilité des températures en l'absence de flux massique causé par la convection naturelle. Dans l'orientation inverse `\texttt{V1}' représentée par les tracés en traits pleins, la différence de température apparaît également après le démarrage des sources acoustiques. Toutefois, après \qty{1800}{\second} les thermocouples sur l'axe de symétrie et en vis à vis l'un de l'autre, autrement dit devant la source acoustique principale et le thermocouple~2, affichent la même température. De manière plus générale, tous les thermocouple de cette zone d'adaptation d'impédance sont à des températures plus homogènes, puisque l'écart maximum de températures est dans ce cas de \qty{.8}{\degreeCelsius}. Un effet très remarquable pour cette orientation est l'évolution de température en deux étapes : la première, pendant laquelle la température sur l'échangeur froid diminue et qui s'étend du démarrage des sources à \qty{1100}{\second}, et la seconde, de cet instant jusqu'à la fin de l'acquisition et où un réchauffement des thermocouples sur l'échangeur froid apparaît. Il semblerait qu'il s'agisse là de la manifestations de deux effets aux constantes de temps différentes, l'effet thermoacoustique qui agit dès l'allumage des sources acoustiques et la convection naturelle, plus lente. Il est supposé que lors de la première étape, la différence de température augmente peu à peu et le nombre de Rayleigh avec elle, et ce, jusqu'au dépassement de la valeur critique de $\Rayleigh_c$. Au delà de cette valeur \textcolor{red}{que l'on peut estimer expérimentalement avec l'équation~\eqref{eq:NbrRayleigh} appliquée à la différence de température $\Delta \tau|_{t=\qty{1100}{\second}}$ ou bien quand $\partial^2_{tt}\tau=\num{0}$}, une cellule de convection de type Rayleigh-Bénard se met en place, et déplace avec le fluide en mouvement une certaine quantité de chaleur $Q_{\sf conv}$ de la source acoustique vers l'échangeur froid. Le gradient de température entre la source acoustique principale et l'échangeur froid n'étant pas fixé, les deux extrémités de la cavité d'adaptation d'impédance voient leur température converger vers un point d'équilibre, à la valeur moyenne des températures mesurées au mêmes emplacements dans l'orientation `\texttt{V2}'.
+La figure~\ref{fig:Acou_CHXout_V1V2_Low} trace les températures mesurées dans la cavité d'adaptation d'impédance pour des expériences où le réfrigérateur est placé dans les orientations verticales présentées figures~\ref{fig:OrientationCore_V1} et \subref{fig:OrientationCore_V2}, pour une amplitude \og faible \fg{} soit un \textit{drive ratio} $DR=\qty{.7}{\percent}$. Contrairement aux expériences horizontales où les effets de convection naturelle sont toujours présents mais pas toujours visibles, dans les expériences verticales il existe une configuration favorable à la mise en place d'une instabilité de convection naturelle de type Rayleigh-Bénard, et l'autre, inverse, qui est stable. La première configuration est l'orientation `\texttt{V1}', car la source acoustique y est en dessous du noyau thermoacoustique, car le sens du gradient de température est opposé à la gravité, tandis que la seconde est l'orientation `\texttt{V2}' où la source acoustique est au-dessus du noyau. Dans cette dernière orientation, le gradient de température est dans le même sens que la gravité, et il n'y a pas de flux de chaleur qui apparaît de manière spontanée. La première remarque concerne la différence d'aspect de l'évolution des températures entre une orientation et l'autre, malgré une axi-symétrie visible dans les deux cas et attendu au vu de la colinéarité de la dimensions axiale $\mathbf e_x$ et de la gravité $\mathbf g$. En observant les tracés en lignes tiretées, qui tracent l'évolution de la température $\theta$ au cours de l'expérience dans l'orientation `\texttt{V2}', une différence de température de \qty{3.2}{\degreeCelsius} entre l'échangeur froid du noyau et la source acoustique principale plus chaude apparaît et se maintient durant toute la durée de l'expérience. C'est d'ailleurs le plus grand écart de température relevé dans cette zone. Plus précisément, la température mesurée devant la source acoustique principale baisse \qty{.8}{\degreeCelsius} même après démarrage de celle-ci, ce qui est assez faible pour être en accord avec l'hypothèse de stabilité des températures en l'absence de flux massique causé par la convection naturelle. Dans l'orientation inverse `\texttt{V1}' représentée par les tracés en traits pleins, la différence de température apparaît également après le démarrage des sources acoustiques. Toutefois, après \qty{1800}{\second} les thermocouples sur l'axe de symétrie et en vis à vis l'un de l'autre, autrement dit devant la source acoustique principale et le thermocouple~2, affichent la même température. De manière plus générale, tous les thermocouple de cette zone d'adaptation d'impédance sont à des températures plus homogènes, puisque l'écart maximum de températures est dans ce cas de \qty{.8}{\degreeCelsius}. Un effet très remarquable pour cette orientation est l'évolution de température en deux étapes : la première, pendant laquelle la température sur l'échangeur froid diminue et qui s'étend du démarrage des sources à \qty{1100}{\second}, et la seconde, de cet instant jusqu'à la fin de l'acquisition et où un réchauffement des thermocouples sur l'échangeur froid apparaît. Il semblerait qu'il s'agisse là de la manifestations de deux effets aux constantes de temps différentes, l'effet thermoacoustique qui agit dès l'allumage des sources acoustiques et la convection naturelle, plus lente. Il est supposé que lors de la première étape, la différence de température augmente peu à peu et le nombre de Rayleigh avec elle, et ce, jusqu'au dépassement de la valeur critique de $\Rayleigh_c$. Au delà de cette valeur \textcolor{red}{que l'on peut estimer expérimentalement avec l'équation~\eqref{eq:NbrRayleigh} appliquée à la différence de température $\Delta \theta|_{t=\qty{1100}{\second}}$ ou bien quand $\partial^2_{tt}\theta=\num{0}$}, une cellule de convection de type Rayleigh-Bénard se met en place, et déplace avec le fluide en mouvement une certaine quantité de chaleur $Q_{\sf conv}$ de la source acoustique vers l'échangeur froid. Le gradient de température entre la source acoustique principale et l'échangeur froid n'étant pas fixé, les deux extrémités de la cavité d'adaptation d'impédance voient leur température converger vers un point d'équilibre, à la valeur moyenne des températures mesurées au mêmes emplacements dans l'orientation `\texttt{V2}'.
 \smallskip
  
 \begin{figure}[!ht]
