--- a/tex/IndexNotations.tex
+++ b/tex/IndexNotations.tex
@@ -19,7 +19,7 @@
         $C_v$ & Capacité calorifique du gaz à volume constant \\
         $L_{\sf reg}$ & Longueur du régénérateur, $L_{\sf reg}=\qty{39}{\milli\meter}$ \\
         $\Nusselt$ & Nombre de Nusselt \\
-        $P_0$ & Pression statique dans le réfrigérateur \\
+        $p_0$ & Pression statique dans le réfrigérateur \\
         $p$ & Pression acoustique \\
         $\Peclet$ & Nombre de Péclet \\
         $\Prandtl$ & Nombre de Prandtl \\
