--- a/fig/fig_ConvNat_Acou/tex/fig_Acou_CHXout_V1V2_Mid.tex
+++ b/fig/fig_ConvNat_Acou/tex/fig_Acou_CHXout_V1V2_Mid.tex
@@ -19,9 +19,9 @@
     
     	\addlegendimage{legend image with text=}
 		\addlegendentry{}
-		\addlegendimage{legend image with text=V1}
+		\addlegendimage{legend image with text=`\texttt{V1}'}
 		\addlegendentry{}
-		\addlegendimage{legend image with text=V2} 
+		\addlegendimage{legend image with text=`\texttt{V2}'} 
 		\addlegendentry{}       	
     	
     	\addlegendimage{legend image with text=Source acoustique principale}
