--- a/fig/fig_ConvNat_Acou/tex/fig_Acou_Regmid_H1H2_High.tex
+++ b/fig/fig_ConvNat_Acou/tex/fig_Acou_Regmid_H1H2_High.tex
@@ -18,9 +18,9 @@
     
     \addlegendimage{legend image with text=}
 		\addlegendentry{}
-		\addlegendimage{legend image with text=H1}
+		\addlegendimage{legend image with text=`\texttt{H1}'}
 		\addlegendentry{}
-		\addlegendimage{legend image with text=H2} 
+		\addlegendimage{legend image with text=`\texttt{H2}'} 
 		\addlegendentry{}       	
     	
     	\addlegendimage{legend image with text=TC 7}
